35 - Convert sequenceId to rank with lexographical order
Closes #35